kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-go-serivce
  labels:
    app: app-go
spec:
  type: NodePort
  selector:
      app: app-go
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
